--- a/project/P&E_Multilink_CyclonePro.ini
+++ b/project/P&E_Multilink_CyclonePro.ini
@@ -4,7 +4,7 @@ Target=icd12
 Layout=C_layout.hwl
 LoadDialogOptions=AUTOERASEANDFLASH NORUNAFTERLOAD 
 CPU=HC12
-MainFrame=2,3,-1,-1,-1,-1,228,354,1480,1093
+MainFrame=2,3,-32000,-32000,-1,-1,228,354,1480,1093
 TOOLBAR=57600 57601 32795 0 57635 57634 57637 0 57671 57669 0 32777 32776 32782 32780 32781 32778 0 32806
 AEFWarningDialog=FALSE
 
@@ -50,7 +50,7 @@ DBG_S12_0=DBG GENERAL DISARM_ON PROTECT_OFF ANALYZE_ON STEPATRUN_ON
 DBG_S12_1=DBG PREDEFINED SELECT 0
 DBG_S12_2=DBG PREDEFINED DBGENGINE END STOP 0x0 DATAMATCH_HIGH NORMAL
 DBG_S12_3=DBG USER 0x0 0x0 0x0 0x0
-NV_PARAMETER_FILE=C:\Program Files\Freescale\CodeWarrior for S12(X) V5.0\prog\FPP\mcu03D0.fpp
+NV_PARAMETER_FILE=C:\Program Files (x86)\Freescale\CWS12v5.1\prog\FPP\mcu03D0.fpp
 NV_SAVE_WSP=0
 NV_AUTO_ID=1
 
